[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.126.0",
    "jose>=1.0.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.37.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.27",
]
